# jkey

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
src/jkey/: __main__.py  aes.py  cli.py
src/jkey/2fa/: add.py  core.py  ls.py  qr.py  rm.py
src/jkey/pm/: add.py  core.py  edit.py  get.py  import_csv.py  ls.py  rm.py
src/jkey/pv/: core.py  decrypt.py  encrypt.py  export.py  init.py  lock.py  set_pw.py  status.py  unlock.py
src/jkey/rc/: add.py  ls.py  rm.py
tests/: conftest.py  test_aes.py  test_cli.py  test_generator.py  test_list_and_export_paths.py  test_operations.py  test_totp.py  test_vault.py  test_vault_commands.py
