[project]
name = "jkey"
version = "0.1.0"
description = "Password manager and TOTP verification tool"
readme = "README.md"
requires-python = ">=3.14"
authors = [{name = "jiaoyuan", email = "imjiaoyuan@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
keywords = ["password", "totp", "2fa", "vault", "encryption"]
dependencies = [
    "opencv-python-headless>=4.13.0.92",
]

[project.urls]
Homepage = "https://github.com/imjiaoyuan/jkey"
Repository = "https://github.com/imjiaoyuan/jkey"

[project.scripts]
jkey = "jkey.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["jkey*"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
