[project]
name = "jkey"
version = "0.3.2"
description = "Python library for password management and TOTP verification."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "jiaoyuan", email = "imjiaoyuan@gmail.com"}]
license = "MIT"
dependencies = ["portalocker>=2.0,<3.0"]

[project.optional-dependencies]
qr = ["opencv-python-headless>=4.9.0,<5.0.0"]

[project.urls]
Homepage = "https://github.com/imjiaoyuan/jkey"
Repository = "https://github.com/imjiaoyuan/jkey"

[project.scripts]
jkey = "jkey.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=6", "ruff>=0.11"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/jkey --cov-report=term-missing"

[tool.coverage.run]
source_pkgs = ["jkey"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]
